[package]
name = "kine-ranking-list"
authors = ["Invisible Hand Labs Lda. <andreribeiro@invisiblehandlab.org>"]
edition = "2021"
version = "0.1.0"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
codec = { workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# Frame
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false, optional = true }
frame-system = { workspace = true, default-features = false, optional = true }


# SP
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

serde = { workspace = true, features = ["derive"] }


# Local Dependencies
kine-movie = { workspace = true, default-features = false }
kine-tags = { workspace = true, default-features = false }
kine-stat-tracker = { workspace = true, default-features = false }



# pallet-democracy = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
# pallet-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
# pallet-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
# pallet-utility = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
# sp-std = {version = '4.0.0', default-features = false}
# getrandom = { version = "0.2.7", features = ["js"] }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false }



[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"kine-stat-tracker/std",
	"kine-movie/std",
	# "pallet-staking/std",
	# "pallet-session/std",
	# "pallet-utility/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
